--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "twineall",
   "version": "1.0.0",
   "dependecies": {
-    "cookie": "^0.3.1"
+    "cookie": "^0.3.1",
+    "mysql": "^2.16.0"
   },
   "description": "A lightweight crowd-pooling dating app",
   "main": "app.js",
